--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
         "next": "^14.1.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "sass": "^1.70.0",
-        "ts-node": "^10.9.2"
+        "sass": "^1.70.0"
     },
     "devDependencies": {
         "@types/jest": "^29.5.12",
@@ -31,6 +30,7 @@
         "@types/react": "^18.2.53",
         "eslint": "^8.14.0",
         "eslint-config-next": "^12.0.4",
-        "ts-jest": "^29.1.2"
+        "ts-jest": "^29.1.2",
+        "ts-node": "^10.9.2"
     }
 }
